exports[`<Alert /> renders a single message correctly 1`] = `
<MuiComponent>
  message
</MuiComponent>
`;

exports[`<Alert /> renders multiple messages correctly 1`] = `
<MuiComponent>
  <p>
    message
  </p>
  <p>
    message
  </p>
</MuiComponent>
`;
